--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "dotenv": "^10.0.0",
     "typescript": "^4.3.2",
-    "vite": "^2.4.4"
+    "vite": "^2.4.4",
+    "vite-plugin-windicss": "^1.2.7",
+    "windicss": "^3.1.6"
   },
   "license": "MIT",
   "engines": {
