--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,14 @@
     "paths": {
       "/@/*": ["src/*"]
     },
+    "plugins": [
+      {
+        "name": "typescript-plugin-css-modules",
+        "options": {
+          "customMatcher": "\\.module\\.(c|le|sa|sc)ss$"
+        }
+      }
+    ],
   },
   "include": ["./src"],
   "exclude": ["node_modules"]
