--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "@reduxjs/toolkit": "^1.6.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-redux": "^7.2.4"
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@types/node": "^16.4.6",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.18",
+    "@types/react-router-dom": "^5.1.8",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "dotenv": "^10.0.0",
     "typescript": "^4.3.2",
