--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-redux": "^7.2.4",
+    "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
@@ -20,6 +21,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.18",
+    "@types/react-router-config": "^5.0.3",
     "@types/react-router-dom": "^5.1.8",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "dotenv": "^10.0.0",
