--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "npm run build && vite preview",
-    "preview:dist": "vite preview"
+    "preview:dist": "vite preview",
+    "lint:stylelint": "stylelint --fix \"**/*.{less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.1",
@@ -25,6 +26,10 @@
     "@types/react-router-dom": "^5.1.8",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "dotenv": "^10.0.0",
+    "stylelint": "^13.13.1",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-standard": "^22.0.0",
+    "stylelint-order": "^4.1.0",
     "typescript": "^4.3.2",
     "typescript-plugin-css-modules": "^3.4.0",
     "vite": "^2.4.4",
