--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-config": "^5.1.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^16.4.8",
@@ -26,6 +27,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-router-config": "^5.0.3",
     "@types/react-router-dom": "^5.1.8",
+    "@types/styled-components": "^5.1.12",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
     "@vitejs/plugin-react-refresh": "^1.3.6",
