--- a/package.json
+++ b/package.json
@@ -2,15 +2,29 @@
   "name": "vite-react-ts-starter",
   "version": "0.1.0",
   "author": "zhixiangyao <blueskyzx@icloud.com> <https://github.com/zhixiangyao>",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zhixiangyao/vite-react-ts-starter.git"
+  },
+  "homepage": "https://github.com/zhixiangyao/vite-react-ts-starter",
   "scripts": {
     "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "npm run build && vite preview",
     "preview:dist": "vite preview",
-    "lint:all": "npm run lint:eslint && npm run lint:prettier && npm run lint:stylelint",
-    "lint:eslint": "eslint \"{src,mock}/**/*.{ts,tsx}\" --fix",
-    "lint:prettier": "prettier --write --loglevel warn \"src/**/*.{js,json,tsx,css,less,scss,html,md}\"",
-    "lint:stylelint": "stylelint --fix \"**/*.{less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/"
+    "lint-staged": "lint-staged",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "src/**/*.{js,ts,tsx}": [
+      "npx eslint --fix"
+    ],
+    "src/**/*.{js,json,tsx,css,less,scss,html,md}": [
+      "npx prettier --write"
+    ],
+    "src/**/*.{jsx,tsx,less,postcss,css,scss}": [
+      "npx stylelint --fix --cache --cache-location node_modules/.cache/stylelint/"
+    ]
   },
   "dependencies": {
     "mobx": "^6.3.3",
@@ -35,6 +49,8 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.1",
+    "husky": "^7.0.0",
+    "lint-staged": "^11.1.2",
     "prettier": "^2.3.2",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
