--- a/package.json
+++ b/package.json
@@ -69,6 +69,6 @@
   },
   "license": "MIT",
   "engines": {
-    "node": "^12 || ^14 || ^15 || ^16"
+    "node": "^12 || ^14 || ^15 || ^16 || ^17"
   }
 }
