--- a/package.json
+++ b/package.json
@@ -31,41 +31,40 @@
     ]
   },
   "dependencies": {
-    "mobx": "^6.3.5",
+    "history": "^5.1.0",
+    "mobx": "^6.3.7",
     "mobx-react": "^7.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-config": "^5.1.1",
-    "react-router-dom": "^5.3.0",
+    "react-router": "^6.0.2",
+    "react-router-dom": "^6.0.2",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@types/node": "^16.11.6",
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
-    "@types/react-router-config": "^5.0.3",
+    "@types/node": "^16.11.7",
+    "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.2",
     "@types/styled-components": "^5.1.15",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "dotenv": "^10.0.0",
-    "eslint": "^7.32.0",
+    "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.4",
-    "lint-staged": "^11.2.6",
+    "lint-staged": "^12.0.1",
     "prettier": "^2.4.1",
-    "stylelint": "^13.13.1",
-    "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-standard": "^22.0.0",
-    "stylelint-order": "^4.1.0",
+    "stylelint": "^14.0.1",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-standard": "^23.0.0",
+    "stylelint-order": "^5.0.0",
     "typescript": "^4.4.4",
-    "typescript-plugin-css-modules": "^3.4.0",
-    "vite": "^2.6.13",
-    "vite-plugin-windicss": "^1.4.12",
-    "windicss": "^3.2.0"
+    "vite": "^2.6.14",
+    "vite-plugin-windicss": "^1.5.1",
+    "windicss": "^3.2.1"
   },
   "license": "MIT",
   "engines": {
