--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^17.0.2",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
+    "react-window": "^1.8.6",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
@@ -45,6 +46,7 @@
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.2",
+    "@types/react-window": "^1.8.5",
     "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
