--- a/package.json
+++ b/package.json
@@ -31,45 +31,46 @@
     ]
   },
   "dependencies": {
-    "history": "^5.1.0",
-    "mobx": "^6.3.7",
+    "history": "^5.2.0",
+    "mobx": "^6.3.10",
     "mobx-react": "^7.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router": "^6.0.2",
-    "react-router-dom": "^6.0.2",
+    "react-is": "^17.0.2",
+    "react-router": "^6.2.1",
+    "react-router-dom": "^6.2.1",
     "react-window": "^1.8.6",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@types/node": "^16.11.7",
-    "@types/react": "^17.0.34",
+    "@types/node": "^17.0.4",
+    "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.2",
     "@types/react-window": "^1.8.5",
-    "@types/styled-components": "^5.1.15",
-    "@typescript-eslint/eslint-plugin": "^5.3.1",
-    "@typescript-eslint/parser": "^5.3.1",
+    "@types/styled-components": "^5.1.19",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.8.0",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "dotenv": "^10.0.0",
-    "eslint": "^8.2.0",
+    "eslint": "^8.5.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.4",
-    "lint-staged": "^12.0.1",
-    "prettier": "^2.4.1",
-    "stylelint": "^14.0.1",
+    "lint-staged": "^12.1.4",
+    "prettier": "^2.5.1",
+    "stylelint": "^14.2.0",
     "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-standard": "^23.0.0",
+    "stylelint-config-standard": "^24.0.0",
     "stylelint-order": "^5.0.0",
-    "typescript": "^4.4.4",
-    "vite": "^2.6.14",
-    "vite-plugin-windicss": "^1.5.1",
-    "windicss": "^3.2.1"
+    "typescript": "^4.5.4",
+    "vite": "^2.7.6",
+    "vite-plugin-windicss": "^1.6.1",
+    "windicss": "^3.4.0"
   },
   "license": "MIT",
   "engines": {
-    "node": "^12 || ^14 || ^15 || ^16 || ^17"
+    "node": ">=12"
   }
 }
