--- a/package.json
+++ b/package.json
@@ -32,41 +32,41 @@
   },
   "dependencies": {
     "history": "^5.3.0",
-    "mobx": "^6.4.2",
+    "mobx": "^6.5.0",
     "mobx-react": "^7.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
-    "react-router": "^6.2.2",
-    "react-router-dom": "^6.2.2",
-    "react-window": "^1.8.6",
-    "styled-components": "^5.3.3"
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
+    "react-window": "^1.8.7",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "@types/node": "^17.0.21",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.13",
+    "@types/node": "^17.0.26",
+    "@types/react": "^17.0.44",
+    "@types/react-dom": "^17.0.15",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-window": "^1.8.5",
-    "@types/styled-components": "^5.1.24",
-    "@typescript-eslint/eslint-plugin": "^5.13.0",
-    "@typescript-eslint/parser": "^5.13.0",
-    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "@types/styled-components": "^5.1.25",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
+    "@vitejs/plugin-react": "^1.3.1",
     "dotenv": "^16.0.0",
-    "eslint": "^8.10.0",
+    "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-react-hooks": "^4.4.0",
     "husky": "^7.0.4",
-    "lint-staged": "^12.3.5",
-    "prettier": "^2.5.1",
-    "stylelint": "^14.5.3",
+    "lint-staged": "^12.4.0",
+    "prettier": "^2.6.2",
+    "stylelint": "^14.7.1",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^24.0.0",
     "stylelint-order": "^5.0.0",
-    "typescript": "^4.5.5",
-    "vite": "^2.8.6",
-    "vite-plugin-windicss": "^1.8.3",
+    "typescript": "^4.6.3",
+    "vite": "^2.9.5",
+    "vite-plugin-windicss": "^1.8.4",
     "windicss": "^3.5.1"
   },
   "license": "MIT",
