--- a/package.json
+++ b/package.json
@@ -13,18 +13,18 @@
     "preview": "npm run build && vite preview",
     "preview:dist": "vite preview",
     "lint:all": "npm run lint:eslint && npm run lint:prettier && npm run lint:stylelint",
-    "lint:eslint": "eslint \"{src,mock}/**/*.{ts,tsx}\" --fix",
-    "lint:prettier": "prettier --write --loglevel warn \"src/**/*.{js,json,tsx,css,less,scss,html,md}\"",
+    "lint:prettier": "prettier --cache --write --loglevel warn \"src/**/*.{js,json,tsx,css,less,scss,html,md}\"",
+    "lint:eslint": "eslint --fix \"{src,mock}/**/*.{ts,tsx}\" --cache --cache-location node_modules/.cache/eslint/",
     "lint:stylelint": "stylelint --fix \"**/*.{less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
     "lint-staged": "lint-staged",
     "prepare": "husky install"
   },
   "lint-staged": {
-    "src/**/*.{js,ts,tsx}": [
-      "npx eslint --fix"
-    ],
     "src/**/*.{js,json,tsx,css,less,scss,html,md}": [
-      "npx prettier --write --loglevel warn"
+      "npx prettier --cache --write --loglevel warn"
+    ],
+    "src/**/*.{js,ts,tsx}": [
+      "npx eslint --fix --cache --cache-location node_modules/.cache/eslint/"
     ],
     "src/**/*.{jsx,tsx,less,postcss,css,scss}": [
       "npx stylelint --fix --cache --cache-location node_modules/.cache/stylelint/"
