--- a/package.json
+++ b/package.json
@@ -32,15 +32,14 @@
   },
   "dependencies": {
     "history": "^5.3.0",
-    "mobx": "^6.8.0",
-    "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "react-router": "^6.8.2",
     "react-router-dom": "^6.8.2",
     "react-window": "^1.8.8",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@types/node": "^18.14.2",
