feat: The value of `jsx` in tsconfig has been changed from `react` to `preserve`.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react",
+    "jsx": "preserve",
     "types": ["vite/client", "node"],
     "typeRoots": ["./node_modules/@types/"],
     "baseUrl": ".",
