--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "preserve",
-    "types": ["vite/client", "node"],
-    "typeRoots": ["./node_modules/@types/"],
+    "types": ["client.d.ts", "node"],
+    "typeRoots": ["./node_modules/@types/", "./node_modules/vite/"],
     "baseUrl": ".",
     "paths": {
       "/@/*": ["src/*"]
