chore: Upgrade packages

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,9 @@
     "plugin:prettier/recommended",
     "prettier"
   ],
+  "plugins": [
+    "import"
+  ],
   "rules": {
     "@typescript-eslint/ban-ts-ignore": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
@@ -40,6 +43,28 @@
       }
     ],
 
-    "space-before-function-paren": "off"
+    "space-before-function-paren": "off",
+
+    "import/order": [
+      1,
+      {
+        "newlines-between": "always",
+        "groups": [
+          "builtin",
+          "external",
+          "internal",
+          "sibling",
+          "parent",
+          "index"
+        ],
+        "pathGroups": [
+          {
+            "pattern": "/@/**",
+            "group": "internal",
+            "position": "after"
+          }
+        ]
+      }
+    ]
   }
 }
