--- a/package.json
+++ b/package.json
@@ -31,39 +31,40 @@
     ]
   },
   "dependencies": {
-    "history": "^5.3.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-is": "^18.2.0",
-    "react-router": "^6.12.1",
-    "react-router-dom": "^6.12.1",
-    "styled-components": "^5.3.11",
-    "zustand": "^4.3.8"
+    "history": "5.3.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-is": "18.2.0",
+    "react-router": "6.13.0",
+    "react-router-dom": "6.13.0",
+    "styled-components": "5.3.11",
+    "zustand": "4.3.8"
   },
   "devDependencies": {
-    "@types/node": "^18.16.3",
-    "@types/react": "^18.2.11",
-    "@types/react-dom": "^18.2.4",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/styled-components": "^5.1.26",
-    "@typescript-eslint/eslint-plugin": "^5.59.9",
-    "@typescript-eslint/parser": "^5.59.9",
-    "@vitejs/plugin-react": "^4.0.0",
-    "dotenv": "^16.1.4",
-    "eslint": "^8.42.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^13.2.2",
-    "prettier": "^2.8.8",
-    "stylelint": "^15.7.0",
-    "stylelint-config-standard": "^33.0.0",
-    "stylelint-order": "^6.0.3",
-    "typescript": "^5.0.4",
-    "vite": "^4.3.9",
-    "vite-plugin-windicss": "^1.9.0",
-    "windicss": "^3.5.6"
+    "@types/node": "18.16.3",
+    "@types/react": "18.2.12",
+    "@types/react-dom": "18.2.5",
+    "@types/react-router-dom": "5.3.3",
+    "@types/styled-components": "5.1.26",
+    "@typescript-eslint/eslint-plugin": "5.59.11",
+    "@typescript-eslint/parser": "5.59.11",
+    "@vitejs/plugin-react": "4.0.0",
+    "dotenv": "16.3.1",
+    "eslint": "8.43.0",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "husky": "8.0.3",
+    "lint-staged": "13.2.2",
+    "prettier": "2.8.8",
+    "stylelint": "15.8.0",
+    "stylelint-config-standard": "33.0.0",
+    "stylelint-order": "6.0.3",
+    "typescript": "5.0.4",
+    "vite": "4.3.9",
+    "vite-plugin-windicss": "1.9.0",
+    "windicss": "3.5.6"
   },
   "license": "MIT",
   "engines": {
