--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     ]
   },
   "dependencies": {
+    "clsx": "1.2.1",
     "history": "5.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
