--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "preview": "npm run build && vite preview",
     "preview:dist": "vite preview",
     "lint:all": "npm run lint:eslint && npm run lint:prettier && npm run lint:stylelint",
-    "lint:prettier": "prettier --cache --write --loglevel warn \"src/**/*.{js,json,tsx,css,less,scss,html,md}\"",
+    "lint:prettier": "prettier --cache --write --log-level warn \"src/**/*.{js,json,tsx,css,less,scss,html,md}\"",
     "lint:eslint": "eslint --fix \"{src,mock}/**/*.{ts,tsx}\" --cache --cache-location node_modules/.cache/eslint/",
     "lint:stylelint": "stylelint --fix \"**/*.{less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
     "lint-staged": "lint-staged",
@@ -21,7 +21,7 @@
   },
   "lint-staged": {
     "src/**/*.{js,json,tsx,css,less,scss,html,md}": [
-      "npx prettier --cache --write --loglevel warn"
+      "npx prettier --cache --write --log-level warn"
     ],
     "src/**/*.{js,ts,tsx}": [
       "npx eslint --fix --cache --cache-location node_modules/.cache/eslint/"
@@ -31,45 +31,44 @@
     ]
   },
   "dependencies": {
-    "clsx": "1.2.1",
+    "clsx": "2.0.0",
     "history": "5.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
-    "react-router": "6.13.0",
-    "react-router-dom": "6.13.0",
-    "styled-components": "5.3.11",
-    "zustand": "4.3.9"
+    "react-router": "6.15.0",
+    "react-router-dom": "6.15.0",
+    "styled-components": "6.0.7",
+    "zustand": "4.4.1"
   },
   "devDependencies": {
     "@types/node": "18.16.3",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
+    "@types/react": "18.2.20",
+    "@types/react-dom": "18.2.7",
     "@types/react-router-dom": "5.3.3",
-    "@types/styled-components": "5.1.26",
-    "@typescript-eslint/eslint-plugin": "5.59.11",
-    "@typescript-eslint/parser": "5.59.11",
-    "@vitejs/plugin-react": "4.0.1",
+    "@typescript-eslint/eslint-plugin": "6.4.0",
+    "@typescript-eslint/parser": "6.4.0",
+    "@vitejs/plugin-react": "4.0.4",
     "dotenv": "16.3.1",
-    "eslint": "8.43.0",
-    "eslint-config-prettier": "8.8.0",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-prettier": "4.2.1",
+    "eslint": "8.47.0",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-import": "2.28.0",
+    "eslint-plugin-prettier": "5.0.0",
     "eslint-plugin-react-hooks": "4.6.0",
     "husky": "8.0.3",
-    "lint-staged": "13.2.3",
-    "prettier": "2.8.8",
-    "stylelint": "15.10.0",
+    "lint-staged": "14.0.0",
+    "prettier": "3.0.1",
+    "stylelint": "15.10.2",
     "stylelint-config-standard": "34.0.0",
     "stylelint-order": "6.0.3",
     "typescript": "5.1.6",
-    "vite": "4.3.9",
-    "vite-plugin-windicss": "1.9.0",
+    "vite": "4.4.9",
+    "vite-plugin-windicss": "1.9.1",
     "windicss": "3.5.6"
   },
   "license": "MIT",
   "engines": {
-    "node": ">=16.17.0",
-    "pnpm": ">=7.17.0"
+    "node": ">=16",
+    "pnpm": ">=8"
   }
 }
