feat: use `tailwindcss` replace `windicss`

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,9 +21,7 @@
     "plugin:prettier/recommended",
     "prettier"
   ],
-  "plugins": [
-    "import"
-  ],
+  "plugins": ["import"],
   "rules": {
     "@typescript-eslint/ban-ts-ignore": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
@@ -49,14 +47,7 @@
       1,
       {
         "newlines-between": "always",
-        "groups": [
-          "builtin",
-          "external",
-          "internal",
-          "sibling",
-          "parent",
-          "index"
-        ],
+        "groups": ["builtin", "external", "internal", "sibling", "parent", "index"],
         "pathGroups": [
           {
             "pattern": "/@/**",
