--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,31 +1,20 @@
 {
   "root": true,
-  "plugins": [
-    "stylelint-order"
-  ],
-  "extends": [
-    "stylelint-config-standard"
-  ],
+  "plugins": ["stylelint-order"],
+  "extends": ["stylelint-config-standard"],
+  "customSyntax": "postcss-styled-syntax",
   "rules": {
     "selector-class-pattern": null,
     "selector-pseudo-class-no-unknown": [
       true,
       {
-        "ignorePseudoClasses": [
-          "global"
-        ]
+        "ignorePseudoClasses": ["global"]
       }
     ],
     "at-rule-no-unknown": [
       true,
       {
-        "ignoreAtRules": [
-          "function",
-          "if",
-          "each",
-          "include",
-          "mixin"
-        ]
+        "ignoreAtRules": ["function", "if", "each", "include", "mixin"]
       }
     ],
     "no-empty-source": null,
@@ -35,18 +24,13 @@
     "rule-empty-line-before": [
       "always",
       {
-        "ignore": [
-          "after-comment",
-          "first-nested"
-        ]
+        "ignore": ["after-comment", "first-nested"]
       }
     ],
     "unit-no-unknown": [
       true,
       {
-        "ignoreUnits": [
-          "rpx"
-        ]
+        "ignoreUnits": ["rpx"]
       }
     ],
     "order/properties-order": [
@@ -203,9 +187,5 @@
       "speak"
     ]
   },
-  "ignoreFiles": [
-    "**/*.tsx",
-    "**/*.js",
-    "**/*.ts"
-  ]
+  "ignoreFiles": ["**/*.tsx", "**/*.js", "**/*.ts"]
 }
