--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vite-react-ts-starter",
   "version": "0.1.0",
+  "type": "module",
   "author": "zhixiangyao <blueskyzx@icloud.com> <https://github.com/zhixiangyao>",
   "repository": {
     "type": "git",
@@ -49,6 +50,7 @@
     "@typescript-eslint/eslint-plugin": "6.4.0",
     "@typescript-eslint/parser": "6.4.0",
     "@vitejs/plugin-react": "4.0.4",
+    "autoprefixer": "10.4.15",
     "dotenv": "16.3.1",
     "eslint": "8.47.0",
     "eslint-config-prettier": "9.0.0",
@@ -57,14 +59,15 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "husky": "8.0.3",
     "lint-staged": "14.0.0",
+    "postcss-load-config": "4.0.1",
+    "postcss-styled-syntax": "^0.4.0",
     "prettier": "3.0.1",
     "stylelint": "15.10.2",
     "stylelint-config-standard": "34.0.0",
     "stylelint-order": "6.0.3",
+    "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
-    "vite": "4.4.9",
-    "vite-plugin-windicss": "1.9.1",
-    "windicss": "3.5.6"
+    "vite": "4.4.9"
   },
   "license": "MIT",
   "engines": {
