--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "postcss-load-config": "4.0.1",
     "postcss-styled-syntax": "^0.5.0",
     "prettier": "3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.5",
     "stylelint": "15.10.3",
     "stylelint-config-standard": "34.0.0",
     "stylelint-order": "6.0.3",
