--- a/package.json
+++ b/package.json
@@ -32,43 +32,42 @@
     ]
   },
   "dependencies": {
+    "@emotion/css": "11.11.2",
     "clsx": "2.0.0",
-    "history": "5.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
-    "react-router": "6.16.0",
-    "react-router-dom": "6.16.0",
-    "styled-components": "6.0.8",
-    "zustand": "4.4.1"
+    "react-router": "6.18.0",
+    "react-router-dom": "6.18.0",
+    "zustand": "4.4.6"
   },
   "devDependencies": {
-    "@types/node": "20.6.3",
-    "@types/react": "18.2.22",
-    "@types/react-dom": "18.2.7",
+    "@types/node": "20.8.10",
+    "@types/react": "18.2.34",
+    "@types/react-dom": "18.2.14",
     "@types/react-router-dom": "5.3.3",
-    "@typescript-eslint/eslint-plugin": "6.7.2",
-    "@typescript-eslint/parser": "6.7.2",
-    "@vitejs/plugin-react": "4.0.4",
+    "@typescript-eslint/eslint-plugin": "6.9.1",
+    "@typescript-eslint/parser": "6.9.1",
+    "@vitejs/plugin-react": "4.1.1",
     "autoprefixer": "10.4.16",
     "dotenv": "16.3.1",
-    "eslint": "8.49.0",
+    "eslint": "8.52.0",
     "eslint-config-prettier": "9.0.0",
-    "eslint-plugin-import": "2.28.1",
-    "eslint-plugin-prettier": "5.0.0",
+    "eslint-plugin-import": "2.29.0",
+    "eslint-plugin-prettier": "5.0.1",
     "eslint-plugin-react-hooks": "4.6.0",
     "husky": "8.0.3",
-    "lint-staged": "14.0.1",
+    "lint-staged": "15.0.2",
     "postcss-load-config": "4.0.1",
     "postcss-styled-syntax": "^0.5.0",
     "prettier": "3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.5",
-    "stylelint": "15.10.3",
+    "prettier-plugin-tailwindcss": "^0.5.6",
+    "stylelint": "15.11.0",
     "stylelint-config-standard": "34.0.0",
     "stylelint-order": "6.0.3",
-    "tailwindcss": "3.3.3",
+    "tailwindcss": "3.3.5",
     "typescript": "5.2.2",
-    "vite": "4.4.9"
+    "vite": "4.5.0"
   },
   "license": "MIT",
   "engines": {
