--- a/package.json
+++ b/package.json
@@ -13,65 +13,65 @@
     "build": "tsc && vite build",
     "preview": "npm run build && vite preview",
     "preview:dist": "vite preview",
-    "lint:all": "npm run lint:eslint && npm run lint:prettier && npm run lint:stylelint",
-    "lint:prettier": "prettier --cache --write --log-level warn \"src/**/*.{js,json,tsx,css,html,md}\"",
-    "lint:eslint": "eslint --fix \"src/**/*.{ts,tsx}\" --cache --cache-location node_modules/.cache/eslint/",
-    "lint:stylelint": "stylelint --fix \"**/*.css\" --cache --cache-location node_modules/.cache/stylelint/",
+    "lint": "npm run lint:eslint && npm run lint:prettier && npm run lint:stylelint",
+    "lint:eslint": "eslint --fix \"./**/*.{mjs,ts,tsx}\" --cache --cache-location node_modules/.cache/eslint/",
+    "lint:prettier": "prettier --cache --write --log-level warn \"./**/*.{json,mjs,ts,tsx,css,html,md}\"",
+    "lint:stylelint": "stylelint --fix \"./**/*.css\" --cache --cache-location node_modules/.cache/stylelint/",
     "lint-staged": "lint-staged",
     "prepare": "husky install"
   },
   "lint-staged": {
-    "src/**/*.{js,json,tsx,css,html,md}": [
+    "./**/*.{json,mjs,ts,tsx,css,html,md}": [
       "npx prettier --cache --write --log-level warn"
     ],
-    "src/**/*.{js,ts,tsx}": [
+    "./**/*.{mjs,ts,tsx}": [
       "npx eslint --fix --cache --cache-location node_modules/.cache/eslint/"
     ],
-    "src/**/*.{jsx,tsx,css}": [
+    "./**/*.css": [
       "npx stylelint --fix --cache --cache-location node_modules/.cache/stylelint/"
     ]
   },
   "dependencies": {
     "@emotion/css": "11.11.2",
-    "clsx": "2.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-is": "18.2.0",
-    "react-router": "6.18.0",
-    "react-router-dom": "6.18.0",
-    "zustand": "4.4.6"
+    "clsx": "2.1.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-is": "18.3.1",
+    "react-router": "6.23.1",
+    "react-router-dom": "6.23.1",
+    "zustand": "4.5.2"
   },
   "devDependencies": {
-    "@types/node": "20.8.10",
-    "@types/react": "18.2.34",
-    "@types/react-dom": "18.2.14",
+    "@types/node": "20.12.11",
+    "@types/react": "18.3.2",
+    "@types/react-dom": "18.3.0",
     "@types/react-router-dom": "5.3.3",
-    "@typescript-eslint/eslint-plugin": "6.9.1",
-    "@typescript-eslint/parser": "6.9.1",
-    "@vitejs/plugin-react": "4.1.1",
-    "autoprefixer": "10.4.16",
-    "dotenv": "16.3.1",
-    "eslint": "8.52.0",
-    "eslint-config-prettier": "9.0.0",
-    "eslint-plugin-import": "2.29.0",
-    "eslint-plugin-prettier": "5.0.1",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "husky": "8.0.3",
-    "lint-staged": "15.0.2",
-    "postcss-load-config": "4.0.1",
-    "postcss-styled-syntax": "^0.5.0",
-    "prettier": "3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.6",
-    "stylelint": "15.11.0",
-    "stylelint-config-standard": "34.0.0",
-    "stylelint-order": "6.0.3",
-    "tailwindcss": "3.3.5",
-    "typescript": "5.2.2",
-    "vite": "4.5.0"
+    "@typescript-eslint/eslint-plugin": "7.8.0",
+    "@typescript-eslint/parser": "7.8.0",
+    "@vitejs/plugin-react": "4.2.1",
+    "autoprefixer": "10.4.19",
+    "dotenv": "16.4.5",
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-react-hooks": "4.6.2",
+    "husky": "9.0.11",
+    "lint-staged": "15.2.2",
+    "postcss-load-config": "5.1.0",
+    "postcss-styled-syntax": "0.6.4",
+    "prettier": "3.2.5",
+    "prettier-plugin-tailwindcss": "0.5.14",
+    "stylelint": "16.5.0",
+    "stylelint-config-standard": "36.0.0",
+    "stylelint-order": "6.0.4",
+    "tailwindcss": "3.4.3",
+    "typescript": "5.4.5",
+    "vite": "5.2.11"
   },
   "license": "MIT",
   "engines": {
-    "node": ">=16",
-    "pnpm": ">=8"
+    "node": ">=22",
+    "pnpm": ">=9"
   }
 }
