--- a/package.json
+++ b/package.json
@@ -42,31 +42,35 @@
     "zustand": "4.5.2"
   },
   "devDependencies": {
-    "@types/node": "20.12.11",
-    "@types/react": "18.3.2",
+    "@eslint/compat": "1.1.0",
+    "@eslint/eslintrc": "3.1.0",
+    "@eslint/js": "9.5.0",
+    "@types/node": "20.14.7",
+    "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
-    "@typescript-eslint/eslint-plugin": "7.8.0",
-    "@typescript-eslint/parser": "7.8.0",
-    "@vitejs/plugin-react": "4.2.1",
+    "@typescript-eslint/eslint-plugin": "7.13.1",
+    "@typescript-eslint/parser": "7.13.1",
+    "@vitejs/plugin-react": "4.3.1",
     "autoprefixer": "10.4.19",
     "dotenv": "16.4.5",
-    "eslint": "8.57.0",
+    "eslint": "9.5.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-react-hooks": "4.6.2",
+    "globals": "15.6.0",
     "husky": "9.0.11",
-    "lint-staged": "15.2.2",
-    "postcss-load-config": "5.1.0",
+    "lint-staged": "15.2.7",
+    "postcss-load-config": "6.0.1",
     "postcss-styled-syntax": "0.6.4",
-    "prettier": "3.2.5",
-    "prettier-plugin-tailwindcss": "0.5.14",
-    "stylelint": "16.5.0",
-    "stylelint-config-standard": "36.0.0",
+    "prettier": "3.3.2",
+    "prettier-plugin-tailwindcss": "0.6.5",
+    "stylelint": "16.6.1",
+    "stylelint-config-standard": "36.0.1",
     "stylelint-order": "6.0.4",
-    "tailwindcss": "3.4.3",
+    "tailwindcss": "3.4.4",
     "typescript": "5.4.5",
-    "vite": "5.2.11"
+    "vite": "5.3.1"
   },
   "license": "MIT",
   "engines": {
