--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
   "typescript.tsdk": "node_modules/typescript/lib",
-  "css.validate": false
+  "css.customData": [".vscode/css_custom_data.json"]
 }
