feat: update deps

--- a/package.json
+++ b/package.json
@@ -32,45 +32,45 @@
     ]
   },
   "dependencies": {
-    "@emotion/css": "11.11.2",
+    "@emotion/css": "11.13.0",
     "clsx": "2.1.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-is": "18.3.1",
-    "react-router": "6.26.1",
-    "react-router-dom": "6.26.1",
-    "zustand": "4.5.5"
+    "react-router": "6.26.2",
+    "react-router-dom": "6.26.2",
+    "zustand": "5.0.0-rc.2"
   },
   "devDependencies": {
     "@eslint/compat": "1.1.1",
     "@eslint/eslintrc": "3.1.0",
-    "@eslint/js": "9.9.0",
-    "@types/node": "20.14.15",
-    "@types/react": "18.3.4",
+    "@eslint/js": "9.10.0",
+    "@types/node": "20.16.5",
+    "@types/react": "18.3.7",
     "@types/react-dom": "18.3.0",
-    "@typescript-eslint/eslint-plugin": "8.2.0",
-    "@typescript-eslint/parser": "8.2.0",
+    "@typescript-eslint/eslint-plugin": "8.6.0",
+    "@typescript-eslint/parser": "8.6.0",
     "@vitejs/plugin-react": "4.3.1",
     "autoprefixer": "10.4.20",
     "dotenv": "16.4.5",
-    "eslint": "9.9.0",
+    "eslint": "9.10.0",
     "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-import": "2.30.0",
     "eslint-plugin-prettier": "5.2.1",
     "eslint-plugin-react-hooks": "4.6.2",
     "globals": "15.9.0",
-    "husky": "9.1.5",
-    "lint-staged": "15.2.9",
+    "husky": "9.1.6",
+    "lint-staged": "15.2.10",
     "postcss-load-config": "6.0.1",
     "postcss-styled-syntax": "0.6.4",
     "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "0.6.6",
-    "stylelint": "16.8.2",
+    "stylelint": "16.9.0",
     "stylelint-config-standard": "36.0.1",
     "stylelint-order": "6.0.4",
-    "tailwindcss": "3.4.10",
-    "typescript": "5.5.4",
-    "vite": "5.4.2"
+    "tailwindcss": "3.4.12",
+    "typescript": "5.6.2",
+    "vite": "5.4.6"
   },
   "license": "MIT",
   "engines": {
