--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     ]
   },
   "dependencies": {
-    "@emotion/css": "11.13.0",
+    "@emotion/react": "11.13.3",
     "clsx": "2.1.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
