--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
     "stylelint-order": "6.0.4",
     "tailwindcss": "3.4.12",
     "typescript": "5.6.2",
-    "vite": "5.4.6"
+    "vite": "5.4.6",
+    "vite-plugin-checker": "0.8.0"
   },
   "license": "MIT",
   "engines": {
