--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "8.6.0",
     "@typescript-eslint/parser": "8.6.0",
-    "@vitejs/plugin-react": "4.3.1",
+    "@vitejs/plugin-react-swc": "3.7.0",
     "autoprefixer": "10.4.20",
     "dotenv": "16.4.5",
     "eslint": "9.10.0",
