--- a/package.json
+++ b/package.json
@@ -37,40 +37,40 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-is": "18.3.1",
-    "react-router": "6.26.2",
-    "react-router-dom": "6.26.2",
-    "zustand": "5.0.0-rc.2"
+    "react-router": "6.28.0",
+    "react-router-dom": "6.28.0",
+    "zustand": "5.0.1"
   },
   "devDependencies": {
-    "@eslint/compat": "1.1.1",
+    "@eslint/compat": "1.2.2",
     "@eslint/eslintrc": "3.1.0",
-    "@eslint/js": "9.10.0",
-    "@types/node": "20.16.5",
-    "@types/react": "18.3.7",
-    "@types/react-dom": "18.3.0",
-    "@typescript-eslint/eslint-plugin": "8.6.0",
-    "@typescript-eslint/parser": "8.6.0",
-    "@vitejs/plugin-react-swc": "3.7.0",
+    "@eslint/js": "9.14.0",
+    "@types/node": "20.17.6",
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1",
+    "@typescript-eslint/eslint-plugin": "8.13.0",
+    "@typescript-eslint/parser": "8.13.0",
+    "@vitejs/plugin-react-swc": "3.7.1",
     "autoprefixer": "10.4.20",
     "dotenv": "16.4.5",
-    "eslint": "9.10.0",
+    "eslint": "9.14.0",
     "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-import": "2.30.0",
+    "eslint-plugin-import": "2.31.0",
     "eslint-plugin-prettier": "5.2.1",
-    "eslint-plugin-react-hooks": "4.6.2",
-    "globals": "15.9.0",
+    "eslint-plugin-react-hooks": "5.0.0",
+    "globals": "15.12.0",
     "husky": "9.1.6",
     "lint-staged": "15.2.10",
     "postcss-load-config": "6.0.1",
-    "postcss-styled-syntax": "0.6.4",
+    "postcss-styled-syntax": "0.7.0",
     "prettier": "3.3.3",
-    "prettier-plugin-tailwindcss": "0.6.6",
-    "stylelint": "16.9.0",
+    "prettier-plugin-tailwindcss": "0.6.8",
+    "stylelint": "16.10.0",
     "stylelint-config-standard": "36.0.1",
     "stylelint-order": "6.0.4",
-    "tailwindcss": "3.4.12",
-    "typescript": "5.6.2",
-    "vite": "5.4.6",
+    "tailwindcss": "3.4.14",
+    "typescript": "5.6.3",
+    "vite": "5.4.10",
     "vite-plugin-checker": "0.8.0"
   },
   "license": "MIT",
