--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "tailwindcss": "4.0.12",
     "typescript": "5.8.2",
     "vite": "6.2.1",
-    "vite-plugin-checker": "0.9.0"
+    "vite-plugin-checker": "0.9.0",
+    "vite-plugin-compression": "0.5.1"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
