feat: Use more mainstream aliases

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -13,7 +13,7 @@
     "module": "ESNext",
     "moduleResolution": "bundler",
     "paths": {
-      "/@/*": ["src/*"]
+      "~/*": ["src/*"]
     },
     "types": ["vite/client", "@emotion/react/types/css-prop", "node"],
     "allowImportingTsExtensions": true,
