feat: improve tailwindcss intellisense

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -20,7 +20,7 @@
     "at-rule-no-unknown": [
       true,
       {
-        "ignoreAtRules": ["tailwind", "mixin", "apply"]
+        "ignoreAtRules": ["tailwind", "custom-variant", "mixin", "apply"]
       }
     ],
     "no-empty-source": null,
