--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,38 +1,11 @@
 {
   "root": true,
-  "plugins": ["stylelint-order"],
   "extends": ["stylelint-config-standard"],
+  "plugins": ["stylelint-order"],
   "rules": {
+    "at-rule-no-deprecated": null,
+    "at-rule-no-unknown": null,
     "import-notation": null,
-    "selector-class-pattern": null,
-    "selector-pseudo-class-no-unknown": [
-      true,
-      {
-        "ignorePseudoClasses": ["global"]
-      }
-    ],
-    "at-rule-no-deprecated": [
-      true,
-      {
-        "ignoreAtRules": ["apply"]
-      }
-    ],
-    "at-rule-no-unknown": [
-      true,
-      {
-        "ignoreAtRules": ["tailwind", "custom-variant", "mixin", "apply"]
-      }
-    ],
-    "no-empty-source": null,
-    "no-descending-specificity": null,
-    "font-family-name-quotes": null,
-    "font-family-no-missing-generic-family-keyword": null,
-    "rule-empty-line-before": [
-      "always",
-      {
-        "ignore": ["after-comment", "first-nested"]
-      }
-    ],
     "order/properties-order": [
       "content",
       "position",
@@ -186,6 +159,5 @@
       "unicode-bidi",
       "speak"
     ]
-  },
-  "ignoreFiles": ["**/*.tsx", "**/*.js", "**/*.ts"]
+  }
 }
